# Torchmate

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.devcontainer/: custom.sh  devcontainer.json
.github/workflows/: pypi.yml  tests.yml
docker/: Dockerfile.dev
docs/: callbacks.rst  conf.py  index.rst  installation.rst  modules.rst  quickstart.rst  requirements.txt  trainer.rst  utils.rst
docs/_static/: faculty.css
tests/: test_callbacks.py  test_trainer.py  test_utils.py
tests/test_logs/: log.csv
torchmate/: __init__.py
torchmate/callbacks/: __init__.py  callback.py  csv_logger.py  early_stopper.py  gradient_accumulator.py  gradient_clipper.py  model_checkpoint.py  wandb_logger.py  wandb_model_checkpoint.py
torchmate/modules/: __init__.py  refined_self_attention_sagan.py  squeeze_and_excitation.py
torchmate/trainer/: __init__.py  trainer.py
torchmate/utils/: __init__.py  check_model_info.py  color_text.py  history_plotter.py  progress_bar.py  running_average.py
