[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
    "wheel",
    "pyyaml"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | docs
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.isort]
profile = "black"

